# argus-threat-modeling

./: .env.example  .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml
backend/: pyproject.toml  requirements-ml.txt  requirements.txt
backend/app/: __init__.py  compare.py  config.py  main.py  schemas.py  taxonomy.py
backend/app/argus/: __init__.py  crosscheck.py  detect.py  dfd.py  fusion.py  labelmap.py  ocr.py  orchestrator.py  scoring.py  stride.py  topology.py
backend/app/argus/knowledge/: __init__.py  cve.py  enrich.py  model.py  neo4j_store.py  rag.py  seeds.py  store.py  validate.py
backend/app/argus/knowledge/catalog/: asvs.json  attack.json  capec.json  cve_by_class.json  cwe.json  d3fend.json  nist80053.json
backend/app/ciclope/: pipeline.py
backend/app/llm/: mock.py  provider.py
backend/app/llm/prompts/: ciclope.j2  enrich.j2  judge_pairwise.j2  judge_pointwise.j2
backend/app/report/: render.py
backend/app/report/templates/: report.html.j2
backend/app/routers/: analyze.py  compare.py  health.py  knowledge.py  report.py  settings.py  stage.py
backend/tests/: conftest.py  test_asvs.py  test_chain.py  test_ciclope_mock.py  test_compare.py  test_curadoria.py  test_cve.py  test_dfd.py  test_e2.py  test_e4.py  test_enrich.py  test_eval_metrics.py  test_judge.py  test_kg_local.py  test_knowledge_router.py  test_neo4j_equivalence.py  test_rag.py  test_rank.py  test_report.py  test_schemas.py  test_scoring.py  test_settings.py  test_stage_detect.py  test_stream.py  test_usage.py  test_validate.py
deploy/: .env.prod.example  (+3 more)
(+63 files in other folders)
