[project]
name = "argus-backend"
version = "0.0.1"
description = "ARGUS & Cíclope — backend (modelagem de ameaças STRIDE a partir de diagramas)"
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
# E501: comprimento tratado pelo formatter · B008: idioma do FastAPI (Depends/File/Query em defaults)
ignore = ["E501", "B008"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
filterwarnings = ["ignore::DeprecationWarning"]
markers = ["neo4j: requer um Neo4j acessível (espelho + equivalência); pulado por padrão/CI"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true   # litellm/weasyprint não trazem stubs
check_untyped_defs = true
